<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mnemonic Dictionary</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!-- Login Activity -->
    <string name="login_google">Log In with Google</string>
    <string name="login_facebook">Log In with Facebook</string>
    <string name="signup_google">Sign Up with Google</string>
    <string name="signup_facebook">Sign Up with Facebook</string>
    <string name="login">Log In</string>
    <string name="sigup">Sign Up</string>
    <string name="sigup_email">Sign Up with Email</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot your password?</string>
    <string name="cancel">Cancel</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
</resources>
