<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@null"
    android:orientation="vertical"
    android:paddingLeft="@dimen/side_padding"
    android:paddingRight="@dimen/side_padding">

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/seperator_height"
        android:layout_marginLeft="@dimen/side_padding_half"
        android:layout_marginRight="@dimen/side_padding_half"
        android:background="@color/utopia_grey" />

    <Button
        android:id="@+id/button_sign_facebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/side_padding_half"
        android:background="@drawable/button_facebook"
        android:text="@string/signup_facebook"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_sign_google"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_padding"
        android:background="@drawable/button_google"
        android:text="@string/signup_google"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_sign_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_padding"
        android:background="@drawable/button_signup"
        android:text="@string/sigup_email" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_padding"
        android:background="@drawable/button_login"
        android:text="@string/login" />

</LinearLayout>