<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/side_padding_half"
        android:paddingRight="@dimen/side_padding_half">

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/seperator_height"
            android:layout_marginLeft="@dimen/side_padding_half"
            android:layout_marginRight="@dimen/side_padding_half"
            android:background="@color/utopia_grey" />

        <AutoCompleteTextView
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:layout_marginTop="@dimen/side_padding"
            android:inputType="textPersonName" />

        <AutoCompleteTextView
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_padding"
            android:hint="@string/lastname"
            android:inputType="textPersonName" />

        <AutoCompleteTextView
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_padding"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <AutoCompleteTextView
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_padding"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/side_padding"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_top"
        android:paddingBottom="@dimen/login_padding"
        android:paddingLeft="@dimen/side_padding_half"
        android:paddingRight="@dimen/side_padding_half"
        android:paddingTop="@dimen/login_padding">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_cancel"
            android:text="@string/cancel"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_login_cancel"
            android:text="@string/sigup"
            android:textSize="12sp" />

    </RelativeLayout>
</RelativeLayout>