<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/utopia_blue"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-25dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_book"
            android:id="@+id/logoIcon"
            android:textColor="@color/white"
            android:textSize="250sp"
            android:gravity="center_horizontal"
        />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/logoName"
            android:textColor="@color/white"
            android:textSize="30dp"
        />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sigup"
        android:id="@+id/button_signup"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button_login"
        android:layout_below="@+id/button_signup"
        android:layout_alignLeft="@+id/button_signup"
        android:layout_alignStart="@+id/button_signup"
        android:layout_alignRight="@+id/button_signup"
        android:layout_alignEnd="@+id/button_signup"
        android:visibility="invisible"/>

</RelativeLayout>